Refer users to support instead of emailing maintainers

--- a/changelog
+++ b/changelog
@@ -74,8 +74,13 @@ xorg-server (2:1.8.1-1ubuntu1) UNRELEASED; urgency=low
   * debian/rules: Adjust confflag targets so xcsecurity isn't enabled for udeb
     with disabled xace.
   * Drop 184_virtual_devices_autodetect.patch: It's a noop with todays autoconfig.
+  
+  [ Bryce Harrington ]
+  * debian/rules: Don't reference the package uploader for support; instead point
+    users to the standard Ubuntu support page.
+    (LP: #589811)
 
- -- Robert Hooker <sarvatt@ubuntu.com>  Wed, 02 Jun 2010 13:58:51 -0400
+ -- Bryce Harrington <bryce@ubuntu.com>  Fri, 04 Jun 2010 10:54:38 -0700
 
 xorg-server (2:1.8.1-1) experimental; urgency=low
 
