--- a/changelog
+++ b/changelog
@@ -82,8 +82,9 @@ xorg-server (2:1.8.1.901-1ubuntu1) UNRELEASED; urgency=low
 
   [ Christopher James Halse Rogers ]
   * Add debian/gbp.conf pointing at ubuntu branch.
+  * Drop 109_fix-swcursor-crash.patch; merged upstream in 3a3edb2c.
 
- -- Christopher James Halse Rogers <raof@ubuntu.com>  Fri, 04 Jun 2010 12:29:34 +1000
+ -- Christopher James Halse Rogers <raof@ubuntu.com>  Mon, 07 Jun 2010 10:30:07 +1000
 
 xorg-server (2:1.8.1.901-1) UNRELEASED; urgency=low
 
