--- a/changelog
+++ b/changelog
@@ -83,8 +83,11 @@ xorg-server (2:1.8.1.901-1ubuntu1) UNRELEASED; urgency=low
   [ Christopher James Halse Rogers ]
   * Add debian/gbp.conf pointing at ubuntu branch.
   * Drop 109_fix-swcursor-crash.patch; merged upstream in 3a3edb2c.
-
- -- Christopher James Halse Rogers <raof@ubuntu.com>  Mon, 07 Jun 2010 10:30:07 +1000
+  * 122_xext_fix_card32_overflow_in_xauth.patch: Update to most recent patch
+    on patchwork.  This patch actually works! (tested with 
+    “xauth generate :0 . trusted timeout 99999999) (LP: #519049)
+  
+ -- Christopher James Halse Rogers <raof@ubuntu.com>  Mon, 07 Jun 2010 10:49:39 +1000
 
 xorg-server (2:1.8.1.901-1) UNRELEASED; urgency=low
 
