--- a/changelog
+++ b/changelog
@@ -1,11 +1,16 @@
 xorg-server (2:1.8.99.904-2) UNRELEASED; urgency=low
 
+  [ Julien Cristau ]
   * Drop recommends on xbase-clients.
   * Add xauth to xserver-common recommends.
   * Bump Standards-Version to 3.9.0.
   * Don't install serverminver, drivers shouldn't use this anymore.
 
- -- Julien Cristau <jcristau@debian.org>  Fri, 09 Jul 2010 13:20:31 +0100
+  [ Christopher James Halse Rogers ]
+  * Drop 17-fix-DRI2-segfault-when-clientGone.diff: fixed upstream in more
+    generality.
+
+ -- Christopher James Halse Rogers <raof@ubuntu.com>  Thu, 15 Jul 2010 15:32:38 +1000
 
 xorg-server (2:1.8.99.904-1) experimental; urgency=low
 
