--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-xorg-server (2:1.8.99.904-2) UNRELEASED; urgency=low
+xorg-server (2:1.8.99.905-1) UNRELEASED; urgency=low
 
   [ Julien Cristau ]
   * Drop recommends on xbase-clients.
@@ -7,6 +7,7 @@ xorg-server (2:1.8.99.904-2) UNRELEASED; urgency=low
   * Don't install serverminver, drivers shouldn't use this anymore.
 
   [ Christopher James Halse Rogers ]
+  * New upstream RC
   * Drop 17-fix-DRI2-segfault-when-clientGone.diff: fixed upstream in more
     generality.
 
