--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,69 @@
+xorg-server (2:1.9.0.902-1ubuntu1) natty; urgency=low
+
+  * Merge from Debian experimental.  Remaining Ubuntu changes:
+    - rules:
+      + Disable SELinux, libaudit-dev is not in main yet. (LP: #406226)
+      + Enable xcsecurity. (LP: #247537)
+      + Add --with-extra-module-dir to support GL alternatives.
+    - control: 
+      + Xvfb depends on xauth, x11-xkb-utils. (LP: #500102)
+      + Add breaks for incompatible drivers. (LP: #614993)
+      + Drop libaudit-dev from build-deps.
+    - rules, local/64-xorg-xkb.rules: Don't use keyboard-configuration
+      until it's available.
+    - local/xvfb-run*: Add correct docs about error codes. (LP #328205)
+    - debian/patches:
+      + 100_rethrow_signals.patch:
+        When aborting, re-raise signals for apport
+      + 109_fix-swcursor-crash.patch:
+        Avoid dereferencing null pointer while reloading cursors during
+        resume. (LP: #371405)
+      + 111_armel-drv-fallbacks.patch:
+        Add support for armel driver fallbacks.
+      + 121_only_switch_vt_when_active.diff:
+        Add a check to prevent the X server from changing the VT when killing
+        GDM from the console.
+      + 122_xext_fix_card32_overflow_in_xauth.patch:
+        Fix server crash when “xauth generate” is called with large timeout.
+      + 157_check_null_modes.patch, 162_null_crtc_in_rotation.patch,
+        166_nullptr_xinerama_keyrepeat.patch, 167_nullptr_xisbread.patch
+        169_mipointer_nullptr_checks.patch,
+        172_cwgetbackingpicture_nullptr_check.patch:
+        Fix various segfaults in xserver by checking pointers for NULL
+        values before dereferencing them.
+      + 165_man_xorg_conf_no_device_ident.patch
+        Correct man page
+      + 168_glibc_trace_to_stderr.patch:
+        Report abort traces to stderr instead of terminal
+      + 184_virtual_devices_autodetect.patch:
+        Use vesa for qemu device, which is not supported by cirrus
+      + 187_edid_quirk_hp_nc8430.patch:
+        Quirk for another LPL monitor (LP: #380009)
+      + 188_default_primary_to_first_busid.patch:
+        Pick the first device and carry on (LP: #459512)
+      + 189_xserver_1.5.0_bg_none_root.patch:
+        Create a root window with no background.
+      + 190_cache-xkbcomp_output_for_fast_start_up.patch:
+      + 191-Xorg-add-an-extra-module-path.patch:
+        Add support for the alternatives module path.
+      + 197_xvfb-randr.patch:
+        Adds xrandr support to xvfb. (LP: #516123)
+      + 198_nohwaccess.patch:
+        Adds a -nohwaccess argument to make X not access the hardware
+        ports directly.
+      + 200_randr-null.patch:
+        Clarify a pointer initialization.
+      + 203_gestures-extension.patch:
+      + 202_xf86CoordinationsToWindows.patch:
+        Add gesture extension support (LP: #616678)
+      + 204_fix-neg-sync-transition.patch:
+        Fixes gnome screensaver fade being uninterruptable. (LP: #595555)
+      + 206_intel_8xx_default_to_fbdev.patch:
+        Makes 8xx class intel GPUs default to fbdev for stability. (LP: #633593)
+  * Drop 205_udev-product-ids.patch, merged upstream.
+
+ -- Robert Hooker <robert.hooker@canonical.com>  Mon, 18 Oct 2010 11:19:33 -0400
+
 xorg-server (2:1.9.0.902-1) experimental; urgency=low
 
   * New upstream release (1.9.1 rc2).
@@ -135,6 +201,15 @@ xorg-server (2:1.9.0-0ubuntu1) maverick; urgency=low
       + debian/serverminver:
         Bump for gesture support
   * New upstream release:
+    - Fixes crash in DamageUnregister on session close (LP: #343694)
+    - Fixes crash with extremely large windows exposed by xpdf (Closes: #320627)
+  * Drop 17-fix-DRI2-segfault-when-clientGone.diff: fixed upstream in more
+    generality.
+  * debian/patches/204_fix-neg-sync-transition.patch:
+    - Fix edge case in SYNC extension resulting in GNOME screensaver's 
+      fade-to-screensaver being uninteruptible.  (LP: #595555)
+
+ -- Christopher James Halse Rogers <raof@ubuntu.com>  Tue, 24 Aug 2010 15:44:10 +1000
 
 xorg-server (2:1.8.99.905-1ubuntu3) maverick; urgency=low
 
