--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+xorg-server (2:1.9.0.902-1ubuntu2) UNRELEASED; urgency=low
+
+  * Cherry-pick 3effb61e from server-1.9 branch.  Fixes a typo in Xinerama
+    support which caused Qt apps to crash X when using Xinerama multi-head
+    (LP: #650539)
+
+ -- Christopher James Halse Rogers <raof@ubuntu.com>  Mon, 22 Nov 2010 13:09:14 +1100
+
 xorg-server (2:1.9.0.902-1ubuntu1) natty; urgency=low
 
   * Merge from Debian experimental.  Remaining Ubuntu changes:
