--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ xorg-server (2:1.9.99.901-1ubuntu1) natty; urgency=low
 
   * Merge from (unreleased) debian-experimental.  Remaining Ubuntu changes:
     - …
+  * Refresh 121_only_switch_vt_when_active.diff for new upstream.
 
  -- Christopher James Halse Rogers <raof@ubuntu.com>  Mon, 10 Jan 2011 15:53:23 -0600
 
