--- a/changelog
+++ b/changelog
@@ -6,6 +6,8 @@ xorg-server (2:1.9.99.901-1ubuntu1) natty; urgency=low
   * Drop 189_xserver_1.5.0_bg_none_root.patch; functionality now upstream.
   * Refresh 190_cache-xkbcomp_output_for_fast_start_up.patch for new upstream.
   * Refresh 197_xvfb-randr.patch for new upstream.
+  * Drop 207_dga_master_device.patch; upstream.
+  * Drop 208_switch_on_release.diff; upstream.
 
  -- Christopher James Halse Rogers <raof@ubuntu.com>  Mon, 10 Jan 2011 15:53:23 -0600
 
