--- a/changelog
+++ b/changelog
@@ -8,6 +8,10 @@ xorg-server (2:1.9.99.901-1ubuntu1) natty; urgency=low
   * Refresh 197_xvfb-randr.patch for new upstream.
   * Drop 207_dga_master_device.patch; upstream.
   * Drop 208_switch_on_release.diff; upstream.
+  * debian/patches/209_add_legacy_bgnone_option.patch:
+    + Add "-nr" as a synonym for "-background none" to ease the transition from
+      the old 189_xserver_1.5.0_bg_none_root.patch patch.  Can be dropped once
+      all the ?DM have been updated to use the new option.
 
  -- Christopher James Halse Rogers <raof@ubuntu.com>  Mon, 10 Jan 2011 15:53:23 -0600
 
