Search for DRI drivers in the same directories as mesa

--- a/changelog
+++ b/changelog
@@ -1,3 +1,12 @@
+xorg-server (2:1.9.99.901+git20110131.be3be758-0ubuntu6) natty; urgency=low
+
+  * debian/patches/214_glx_dri_searchdirs.patch:
+    - Search for DRI drivers for AIGLX in the same set of directories as mesa.
+      Allows us to fall back to the classic radeon drivers when KMS is not
+      available.
+
+ -- Christopher James Halse Rogers <raof@ubuntu.com>  Fri, 18 Feb 2011 11:19:30 +1100
+
 xorg-server (2:1.9.99.901+git20110131.be3be758-0ubuntu5) natty; urgency=low
 
   * Add 213_xichangehierarchy-check-oom.patch: Another NULL pointer check
